# curlpipe

./: .gitignore  .travis.yml  BUILD  CMakeLists.txt  COPYING  NOTICE  README.md  RELEASE-NOTES  docker-compose.yml  minimal.supp
cmake-modules/: CTestCustom.cmake  DownloadProject.cmake
docs/examples/: 1_retrieve.cp
etc/: .curlpiperc  .curlscript-connection  csparser.ebnf  example.cs
include/curlscript/: curlscript.h
lib/: CMakeLists.txt  version.h.in
lib/curlpipe/: ast.cpp  csparser.hpp  curlpipe.cpp  curlpipe.h  eval.cpp  expr.h  helpers.h  http.cpp  log.h  serializer.h  utf8encoder.h  version.h
lib/curlscript/: ast.cpp  csparser.hpp  curlscript.cpp  curlscript.h  eval.cpp  expr.h  helpers.h  http.cpp  log.h  serializer.h  utf8encoder.h  version.h
src/: CMakeLists.txt  main.cpp
test/: CMakeLists.txt  README  unit_test_api.cpp  unit_test_curlpipe.cpp  unit_test_curlscript.cpp  unit_test_main.cpp  unit_test_parser.cpp
test/data/: basic.cp  basic.cs  basic1.cp  basic2.cp  basic3.cp  broken.cp  example.cp  example.cs  person.json  person.xml  test-api-data.cp  test-api-data.cs  test-api-error1.cp  test1.cs  test1a.cs  test1b.cs  test2.cs  test3-error.cs  test3.cs  valgrind.cs
